tests/pos-macros/macro-deprecation.scala
import scala.quoted.*

inline def f = ${ impl } // error
@deprecated def impl(using Quotes) = '{1}
